docs-archive/apache-airflow-providers-edge3/3.1.0/_sources/_api/airflow/providers/edge3/models/edge_worker/index.rst.txt
airflow.providers.edge3.models.edge_worker
==========================================

.. py:module:: airflow.providers.edge3.models.edge_worker


Attributes
----------

.. autoapisummary::

   airflow.providers.edge3.models.edge_worker.DualStatsManager
   airflow.providers.edge3.models.edge_worker.logger


Exceptions
----------

.. autoapisummary::

   airflow.providers.edge3.models.edge_worker.EdgeWorkerVersionException
   airflow.providers.edge3.models.edge_worker.EdgeWorkerDuplicateException


Classes
-------

.. autoapisummary::

   airflow.providers.edge3.models.edge_worker.EdgeWorkerState
   airflow.providers.edge3.models.edge_worker.EdgeWorkerModel


Functions
---------

.. autoapisummary::

   airflow.providers.edge3.models.edge_worker.set_metrics
   airflow.providers.edge3.models.edge_worker.reset_metrics
   airflow.providers.edge3.models.edge_worker.get_registered_edge_hosts
   airflow.providers.edge3.models.edge_worker.request_maintenance
   airflow.providers.edge3.models.edge_worker.exit_maintenance
   airflow.providers.edge3.models.edge_worker.remove_worker
   airflow.providers.edge3.models.edge_worker.change_maintenance_comment
   airflow.providers.edge3.models.edge_worker.request_shutdown
   airflow.providers.edge3.models.edge_worker.add_worker_queues
   airflow.providers.edge3.models.edge_worker.remove_worker_queues


Module Contents
---------------

.. py:data:: DualStatsManager
   :value: None


.. py:data:: logger

.. py:exception:: EdgeWorkerVersionException

   Bases: :py:obj:`airflow.providers.common.compat.sdk.AirflowException`


   Signal a version mismatch between core and Edge Site.


.. py:exception:: EdgeWorkerDuplicateException

   Bases: :py:obj:`airflow.providers.common.compat.sdk.AirflowException`


   Signal that a worker with the same name is already active.


.. py:class:: EdgeWorkerState

   Bases: :py:obj:`str`, :py:obj:`enum.Enum`


   Status of a Edge Worker instance.


   .. py:attribute:: STARTING
      :value: 'starting'


      Edge Worker is in initialization.



   .. py:attribute:: RUNNING
      :value: 'running'


      Edge Worker is actively running a task.



   .. py:attribute:: IDLE
      :value: 'idle'


      Edge Worker is active and waiting for a task.



   .. py:attribute:: SHUTDOWN_REQUEST
      :value: 'shutdown request'


      Request to shutdown Edge Worker is issued. It will be picked-up on the next heartbeat, tasks will drain and then worker will terminate.



   .. py:attribute:: TERMINATING
      :value: 'terminating'


      Edge Worker is completing work (draining running tasks) and stopping.



   .. py:attribute:: OFFLINE
      :value: 'offline'


      Edge Worker was shut down.



   .. py:attribute:: UNKNOWN
      :value: 'unknown'


      No heartbeat signal from worker for some time, Edge Worker probably down or got disconnected.



   .. py:attribute:: MAINTENANCE_REQUEST
      :value: 'maintenance request'


      Worker was requested to enter maintenance mode. Once worker receives this message it will pause fetching tasks and drain tasks.



   .. py:attribute:: MAINTENANCE_PENDING
      :value: 'maintenance pending'


      Edge Worker received the request for maintenance, waiting for tasks to finish. Once tasks are finished will move to 'maintenance mode'.



   .. py:attribute:: MAINTENANCE_MODE
      :value: 'maintenance mode'


      Edge Worker is in maintenance mode. It is online but pauses fetching tasks.



   .. py:attribute:: MAINTENANCE_EXIT
      :value: 'maintenance exit'


      Request Worker is requested to exit maintenance mode. Once the worker receives this state it will un-pause and fetch new tasks.



   .. py:attribute:: OFFLINE_MAINTENANCE
      :value: 'offline maintenance'


      Worker was shut down in maintenance mode. It will be in maintenance mode when restarted.



.. py:class:: EdgeWorkerModel(worker_name, state, queues, first_online = None, last_update = None, maintenance_comment = None)

   Bases: :py:obj:`airflow.providers.edge3.models.edge_base.Base`, :py:obj:`airflow.utils.log.logging_mixin.LoggingMixin`


   A Edge Worker instance which reports the state and health.


   .. py:attribute:: __tablename__
      :value: 'edge_worker'



   .. py:attribute:: worker_name
      :type:  sqlalchemy.orm.Mapped[str]


   .. py:attribute:: state
      :type:  sqlalchemy.orm.Mapped[EdgeWorkerState]


   .. py:attribute:: maintenance_comment
      :type:  sqlalchemy.orm.Mapped[str | None]


   .. py:attribute:: first_online
      :type:  sqlalchemy.orm.Mapped[datetime.datetime | None]


   .. py:attribute:: last_update
      :type:  sqlalchemy.orm.Mapped[datetime.datetime | None]


   .. py:attribute:: jobs_active
      :type:  sqlalchemy.orm.Mapped[int]


   .. py:attribute:: jobs_taken
      :type:  sqlalchemy.orm.Mapped[int]


   .. py:attribute:: jobs_success
      :type:  sqlalchemy.orm.Mapped[int]


   .. py:attribute:: jobs_failed
      :type:  sqlalchemy.orm.Mapped[int]


   .. py:attribute:: sysinfo
      :type:  sqlalchemy.orm.Mapped[str | None]


   .. py:property:: queues
      :type: list[str] | None


      Return list of queues which are stored in queues field.



   .. py:property:: sysinfo_json
      :type: dict | None



   .. py:method:: add_queues(new_queues)

      Add new queue to the queues field.



   .. py:method:: remove_queues(remove_queues)

      Remove queue from queues field.



   .. py:method:: update_state(state)

      Update state field.



.. py:function:: set_metrics(worker_name, state, jobs_active, concurrency, free_concurrency, queues)

   Set metric of edge worker.


.. py:function:: reset_metrics(worker_name)

   Reset metrics of worker.


.. py:function:: get_registered_edge_hosts(states = None, session = NEW_SESSION)

.. py:function:: request_maintenance(worker_name, maintenance_comment, session = NEW_SESSION)

   Write maintenance request to the db.


.. py:function:: exit_maintenance(worker_name, session = NEW_SESSION)

   Write maintenance exit to the db.


.. py:function:: remove_worker(worker_name, session = NEW_SESSION)

   Remove a worker that is offline or just gone from DB.


.. py:function:: change_maintenance_comment(worker_name, maintenance_comment, session = NEW_SESSION)

   Write maintenance comment in the db.


.. py:function:: request_shutdown(worker_name, session = NEW_SESSION)

   Request to shutdown the edge worker.


.. py:function:: add_worker_queues(worker_name, queues, session = NEW_SESSION)

   Add queues to an edge worker.


.. py:function:: remove_worker_queues(worker_name, queues, session = NEW_SESSION)

   Remove queues from an edge worker.


